clusters/homelab/apps/media/plex/service-plex-nfs-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-nfs-server
  namespace: media
  labels:
    app.kubernetes.io/name: plex-nfs-server
    app.kubernetes.io/part-of: plex
spec:
  type: ClusterIP
  clusterIP: 10.43.160.244  # Pinned so PV can reference a stable IP without changes
  ports:
    - name: nfs
      port: 2049
      protocol: TCP
      targetPort: nfs
    - name: mountd
      port: 20048
      protocol: TCP
      targetPort: mountd
    - name: rpcbind
      port: 111
      protocol: TCP
      targetPort: rpcbind
  selector:
    app.kubernetes.io/name: plex-nfs-server
